Add Common API controller to get states, lgas etc
