# storage/api-docs/api-docs.json
@@ -737,6 +737,96 @@
                 }
             }
         },
+        "/countries": {
+            "get": {
+                "tags": [
+                    "Common"
+                ],
+                "summary": "countries",
+                "description": "Get a list of all Countries in the world",
+                "operationId": "0524e5639211d8e9d7166aebd7135d0f",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/states": {
+            "get": {
+                "tags": [
+                    "Common"
+                ],
+                "summary": "states",
+                "description": "Get a list of all States in the world",
+                "operationId": "6fb08ca39a0e0e78a21d337bc6e5d868",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/nigerian-states": {
+            "get": {
+                "tags": [
+                    "Common"
+                ],
+                "summary": "nigerian states",
+                "description": "Get a list of all States in Nigeria",
+                "operationId": "7389ad11feadfeab394dfa3c3a67c214",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/nigerian-lgas": {
+            "get": {
+                "tags": [
+                    "Common"
+                ],
+                "summary": "nigerian lgas",
+                "description": "Get a list of all LGA's in Nigeria",
+                "operationId": "b38d75a86a0c9732456f888e4d91fbf7",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/nigerian-geo-political-zones": {
+            "get": {
+                "tags": [
+                    "Common"
+                ],
+                "summary": "nigerian geopolitical zones",
+                "description": "Get a list of all Geo-Political Zones in Nigeria",
+                "operationId": "cf529de86f5158038030d80ba175f0b9",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
+        "/nigerian-senatorial-zones": {
+            "get": {
+                "tags": [
+                    "Common"
+                ],
+                "summary": "nigerian senatorial zones",
+                "description": "Get a list of all Senatorial Zones in Nigeria",
+                "operationId": "a623aea0040415086c78ee7b754f0ea9",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    }
+                }
+            }
+        },
         "/consent-types": {
             "get": {
                 "tags": [
@@ -3449,6 +3539,55 @@
                                         },
                                         "data": {
                                             "type": "string"
+                                        },
+                                        "message": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/patients/{user_id}": {
+            "get": {
+                "tags": [
+                    "Patient"
+                ],
+                "summary": "getPatientItem",
+                "description": "Get Patient By User ID",
+                "operationId": "5f4c8db7fe992e019635f0b85e03cc98",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id of User",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Patient"
                                         },
                                         "message": {
                                             "type": "string"
@@ -6754,6 +6893,13 @@
             "Patient": {
                 "required": [],
                 "properties": {
+                    "user_id": {
+                        "description": "",
+                        "type": "integer",
+                        "format": "integer",
+                        "readOnly": false,
+                        "nullable": true
+                    },
                     "date_of_birth": {
                         "description": "",
                         "type": "string",
@@ -6768,6 +6914,72 @@
                         "nullable": true
                     },
                     "genotype": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "country": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "state": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "lga": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "phone_number": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "weight": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "height": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "surgical_history": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "allergies_1": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "allergies_2": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "condition_1": {
+                        "description": "",
+                        "type": "string",
+                        "readOnly": false,
+                        "nullable": true
+                    },
+                    "condition_2": {
                         "description": "",
                         "type": "string",
                         "readOnly": false,
